--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/lodash": "^4.14.116",
     "lodash": "^4.17.10"
   },
   "devDependencies": {
@@ -39,6 +40,9 @@
     "url-loader": "^1.1.1",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
-    "webpack-merge": "^4.1.4"
+    "webpack-merge": "^4.1.4",
+    "tencent-wx-app": "^1.1.201712221707",
+    "typescript": "^2.7.2",
+    "awesome-typescript-loader": "^4.0.1"
   }
 }
