--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack --watch --config ./build/webpack.dev.js",
-    "build": "webpack --process --config ./build/webpack.pro.js"
+    "build": "webpack --process --config ./build/webpack.pro.js",
+    "start": "node ./build/devServer.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/lodash": "^4.14.116",
+    "bx-wxapp-ts-decorator": "^1.0.3bx",
     "lodash": "^4.17.10"
   },
   "devDependencies": {
@@ -25,10 +26,13 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "bx-wxapp-webpack-plugin": "^1.0.1",
+    "chalk": "^2.4.1",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
     "file-loader": "^1.1.11",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "less-loader": "^4.1.0",
     "lodash-webpack-plugin": "^0.11.5",
     "mini-css-extract-plugin": "^0.4.1",
@@ -36,13 +40,18 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.22.1",
     "tencent-wx-app": "^1.1.201712221707",
-    "toposort": "^2.0.2",
     "transform-runtime": "0.0.0",
     "ts-loader": "^4.5.0",
     "typescript": "^2.7.2",
+    "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^1.1.1",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
+    "webpack-dev-middleware-hard-disk": "^1.12.1",
     "webpack-merge": "^4.1.4"
+  },
+  "engines": {
+    "node": ">= 4.0.0",
+    "npm": ">= 3.0.0"
   }
 }
