--- a/src/app.json
+++ b/src/app.json
@@ -1,7 +1,6 @@
 {
   "pages": [
-    "pages/index/index",
-    "pages/shop/index"
+    "pages/index/index"
   ],
   "window": {
     "backgroundTextStyle": "dark",
