--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@types/lodash": "^4.14.116",
     "bx-wxapp-ts-decorator": "^1.0.3bx",
-    "lodash": "^4.17.10"
+    "lodash": "^4.17.10",
+    "miniprogram-navigation-bar": "0.0.4",
+    "miniprogram-slide-view": "0.0.3"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
