--- a/project.config.json
+++ b/project.config.json
@@ -5,9 +5,10 @@
 		"es6": false,
 		"postcss": true,
 		"minified": true,
-		"newFeature": true
+		"newFeature": true,
+		"nodeModules": false
 	},
-	"miniprogramRoot": "./dist/",
+	"miniprogramRoot": "dist/",
 	"compileType": "miniprogram",
 	"appid": "wx3823d9efc81e1c9e",
 	"projectname": "%E7%99%BE%E5%A7%93%E5%B0%8F%E7%B3%96%E6%9E%9C",
