--- a/src/app.json
+++ b/src/app.json
@@ -6,6 +6,7 @@
     "backgroundTextStyle": "dark",
     "navigationBarBackgroundColor": "#37363B",
     "navigationBarTitleText": "卡友微服务",
-    "navigationBarTextStyle": "white"
+    "navigationBarTextStyle": "white",
+    "navigationStyle": "custom"
   }
 }
