--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bx-wxapp-ts-decorator": "^1.0.3bx",
     "lodash": "^4.17.10",
     "miniprogram-navigation-bar": "0.0.4",
+    "miniprogram-recycle-view": "0.0.6",
     "miniprogram-slide-view": "0.0.3"
   },
   "devDependencies": {
@@ -28,6 +29,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "bx-wxapp-npm-plugin": "^1.0.0",
     "bx-wxapp-webpack-plugin": "^1.0.1",
     "chalk": "^2.4.1",
     "clean-webpack-plugin": "^0.1.19",
