--- a/project.config.json
+++ b/project.config.json
@@ -1,17 +1,16 @@
 {
-	"description": "项目配置文件。",
+	"description": "卖车宝小程序",
 	"setting": {
 		"urlCheck": false,
 		"es6": false,
 		"postcss": true,
 		"minified": true,
-		"newFeature": true,
-		"nodeModules": false
+		"newFeature": true
 	},
 	"miniprogramRoot": "dist/",
 	"compileType": "miniprogram",
-	"appid": "wx3823d9efc81e1c9e",
-	"projectname": "%E7%99%BE%E5%A7%93%E5%B0%8F%E7%B3%96%E6%9E%9C",
+	"appid": "wx357cc673b5352920",
+	"projectname": "%E7%99%BE%E5%A7%93%E7%BD%91%E5%8D%96%E8%BD%A6%E5%AE%9D",
 	"condition": {
 		"search": {
 			"current": -1,
