--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "@types/lodash": "^4.14.116",
+    "babel-runtime": "^6.26.0",
     "bx-wxapp-ts-decorator": "^1.0.3bx",
     "bx-wxapp-webpack-plugin": "^1.0.5",
-    "lodash": "^4.17.10",
+    "lodash": "^4.17.11",
     "miniprogram-navigation-bar": "0.0.4",
     "miniprogram-recycle-view": "0.0.6",
     "miniprogram-slide-view": "0.0.3"
@@ -39,7 +40,7 @@
     "friendly-errors-webpack-plugin": "^1.7.0",
     "less-loader": "^4.1.0",
     "lodash-webpack-plugin": "^0.11.5",
-    "mini-css-extract-plugin": "^0.4.1",
+    "mini-css-extract-plugin": "^0.4.4",
     "node-sass": "^4.9.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.22.1",
